--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "json-server --static ./build db.json",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev-server" : "json-server -p 8080 db.json"
+    "dev-server": "json-server -p 8080 db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +43,3 @@
     "gh-pages": "^2.0.1"
   }
 }
-
-
-    
